xx, S3QL 0.27

  * The authinfo file now supports passwords that include 
    white space. 
  
  
2010-10-30, S3QL 0.26

  * Fixed a problem with the sftp backend failing because it
    tries to access a file locally.

  * Various minor bugfixes

2010-09-28, S3QL 0.25

  * A critical bug that could cause backups to be deleted too 
    early and potentially break the whole backup strategy has 
    been fixed in contrib/expire_backups.py.
    
    The new version has changed semantics that and also copes
    significantly better when backups are made in irregular time
    intervals.  

  * S3QL should now respond with more consistent performance when
    accessing the file system while s3qlcp, s3qllock or s3qlrm
    is running at the same time. 
    
  * When enabling debug output for the `UploadManager` module,
    S3QL now logs detailed messages about de-duplication, upload
    and compression performance.     

2010-09-18, S3QL 0.24

  * Fixed a deadlock that could cause the mount.s3ql process
    to hang around after umount.
    
  * Fixed a bug that caused S3QL to consider all downloaded
    blocks as dirty and resulted in unneccessary checksum
    calculations on expiration.

  * s3qlctrl can now change the log level at runtime.
  
  * s3qladm delete now also deletes any local stale cache
    files.
    
  * Periodic metadata upload can now be disabled completely
    by specifying an interval of zero.
    
  
2010-09-03, S3QL 0.23

  * Fixed problem with global_lock.py not being installed by
    setup.py

2010-08-31, S3QL 0.22

  * Fixed a bug that could cause file system errors when calling
    s3qlrm on a lot of really large files.

  * The sftp backend is now significantly faster, thanks to skyang2009
    for the patch.

  * s3qlctrl can now change the cache size of a mounted file system.

2010-08-09, S3QL 0.21

  * The metadata is now only uploaded if there have been any changes.

  * mount.s3ql now supports several parallel compression and