@@ -1,5 +1,6 @@
 .. -*- mode: rst -*-
 
+.. _resources:
 
 ================================
 Further Resources / Getting Help
